<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.aegisops</groupId>
  <artifactId>aegisops</artifactId>
  <version>0.1.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>AegisOps</name>
  <description>AI Ops incident diagnosis and automation platform</description>

  <modules>
    <module>modules/aiops-common</module>
    <module>modules/aiops-web</module>
    <module>modules/aiops-persistence</module>
    <module>modules/aiops-audit</module>
    <module>modules/aiops-tenant</module>
    <module>modules/aiops-user</module>
    <module>modules/aiops-security</module>
    <module>modules/aiops-zabbix-adapter</module>
    <module>modules/aiops-datasource</module>
    <module>modules/aiops-integration</module>
    <module>modules/aiops-asset</module>
    <module>modules/aiops-alert</module>
    <module>modules/aiops-incident</module>
    <module>modules/aiops-rca</module>
    <module>modules/aiops-evidence</module>
    <module>modules/aiops-ai-client</module>
    <module>modules/aiops-report</module>
    <module>modules/aiops-runbook</module>
    <module>modules/aiops-execution</module>
    <module>modules/aiops-plugin</module>
    <module>apps/aiops-server</module>
    <module>apps/aiops-worker</module>
    <module>apps/aiops-runner</module>
    <module>modules/aiops-observability</module>
    <module>modules/aiops-platform</module>
  </modules>

  <properties>
    <java.version>21</java.version>
    <spring-boot.version>3.5.8</spring-boot.version>
    <springdoc.version>2.8.14</springdoc.version>
    <spotless.version>2.44.5</spotless.version>
    <maven-checkstyle-plugin.version>3.6.0</maven-checkstyle-plugin.version>
    <checkstyle.version>10.21.1</checkstyle.version>
    <jooq.version>3.19.28</jooq.version>
    <testcontainers.version>1.20.4</testcontainers.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>${java.version}</maven.compiler.release>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring-boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.testcontainers</groupId>
        <artifactId>testcontainers-bom</artifactId>
        <version>${testcontainers.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-core</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.13.0</version>
          <configuration>
            <release>${java.version}</release>
            <parameters>true</parameters>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-maven-plugin</artifactId>
          <version>${spring-boot.version}</version>
          <configuration>
            <skip>true</skip>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>${spotless.version}</version>
        <configuration>
          <encoding>${project.build.sourceEncoding}</encoding>
          <java>
            <googleJavaFormat>
              <version>1.35.0</version>
              <style>GOOGLE</style>
            </googleJavaFormat>
            <importOrder></importOrder>
            <removeUnusedImports></removeUnusedImports>
            <trimTrailingWhitespace></trimTrailingWhitespace>
            <endWithNewline></endWithNewline>
          </java>
          <pom>
            <sortPom>
              <encoding>${project.build.sourceEncoding}</encoding>
              <sortDependencies>scope,groupId,artifactId</sortDependencies>
              <sortPlugins>groupId,artifactId</sortPlugins>
            </sortPom>
          </pom>
        </configuration>
        <executions>
          <execution>
            <id>spotless-check</id>
            <goals>
              <goal>check</goal>
            </goals>
            <phase>verify</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>${maven-checkstyle-plugin.version}</version>
        <configuration>
          <configLocation>${maven.multiModuleProjectDirectory}/infra/checkstyle/checkstyle.xml</configLocation>
          <consoleOutput>true</consoleOutput>
          <failsOnError>true</failsOnError>
          <includeTestSourceDirectory>true</includeTestSourceDirectory>
          <inputEncoding>${project.build.sourceEncoding}</inputEncoding>
          <sourceDirectories>
            <sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
          </sourceDirectories>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>com.puppycrawl.tools</groupId>
            <artifactId>checkstyle</artifactId>
            <version>${checkstyle.version}</version>
          </dependency>
        </dependencies>
        <executions>
          <execution>
            <id>checkstyle-check</id>
            <goals>
              <goal>check</goal>
            </goals>
            <phase>verify</phase>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>



</project>
